nuevo test fork

--- a/TAREAS_OPER/Tarea4_SysCalls/NachOSx64/code/test/Makefile
+++ b/TAREAS_OPER/Tarea4_SysCalls/NachOSx64/code/test/Makefile
@@ -67,6 +67,12 @@ matmult: matmult.o start.o
 	$(LD) $(LDFLAGS) start.o matmult.o -o matmult.coff
 	../bin/coff2noff matmult.coff matmult
 
+fork.o: fork.c
+	$(CC) $(CFLAGS) -c fork.c
+fork: fork.o start.o
+	$(LD) $(LDFLAGS) start.o fork.o -o fork.coff
+	../bin/coff2noff fork.coff fork
+
 
 # Estas reglas sirven para compilar programas simples, que consistan en un unico fuente
 # Las reglas anteriores para construir los ejecutables
