se dan creditos de programa de prueba

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "ratio": "c",
         "sstream": "c",
         "system_error": "c",
-        "memory": "c"
+        "memory": "c",
+        "syscall.h": "c"
     }
 }
